--- a/src/View/Funcionario_View.form
+++ b/src/View/Funcionario_View.form
@@ -436,13 +436,6 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JTextField" name="TxtEstado">
-              <Constraints>
-                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="330" y="110" width="150" height="-1"/>
-                </Constraint>
-              </Constraints>
-            </Component>
             <Component class="javax.swing.JTextField" name="TxtComplemento">
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TxtComplementoActionPerformed"/>
@@ -491,6 +484,53 @@
                 </Constraint>
               </Constraints>
             </Component>
+            <Component class="javax.swing.JComboBox" name="TxtEstado">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Sitka Small" size="11" style="0"/>
+                </Property>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="28">
+                    <StringItem index="0" value="Selecionar"/>
+                    <StringItem index="1" value="Acre"/>
+                    <StringItem index="2" value="Alagoas"/>
+                    <StringItem index="3" value="Amap&#xe1;"/>
+                    <StringItem index="4" value="Amazonas"/>
+                    <StringItem index="5" value="Bahia"/>
+                    <StringItem index="6" value="Cear&#xe1;"/>
+                    <StringItem index="7" value="Distrito Federal"/>
+                    <StringItem index="8" value="Espir&#xed;to Santo"/>
+                    <StringItem index="9" value="G&#xf3;ias"/>
+                    <StringItem index="10" value="Maranh&#xe3;o"/>
+                    <StringItem index="11" value="Mato Grosso"/>
+                    <StringItem index="12" value="Mato Grosso do Sul"/>
+                    <StringItem index="13" value="Minas Gerais"/>
+                    <StringItem index="14" value="Par&#xe1;"/>
+                    <StringItem index="15" value="Para&#xed;ba"/>
+                    <StringItem index="16" value="Paran&#xe1;"/>
+                    <StringItem index="17" value="Pernambuco"/>
+                    <StringItem index="18" value="Piau&#xed;"/>
+                    <StringItem index="19" value="Rio de Janeiro"/>
+                    <StringItem index="20" value="Rio Grande do Norte"/>
+                    <StringItem index="21" value="Rio Grande do Sul"/>
+                    <StringItem index="22" value="Rond&#xf4;nia"/>
+                    <StringItem index="23" value="Roraima"/>
+                    <StringItem index="24" value="Santa Catarina"/>
+                    <StringItem index="25" value="S&#xe3;o Paulo"/>
+                    <StringItem index="26" value="Sergipe"/>
+                    <StringItem index="27" value="Tocantins"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                  <AbsoluteConstraints x="330" y="110" width="150" height="-1"/>
+                </Constraint>
+              </Constraints>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel5">
@@ -521,18 +561,11 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Sitka Small" size="11" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Escolaridade:"/>
+                <Property name="text" type="java.lang.String" value="   Escolaridade:"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="10" y="20" width="80" height="20"/>
-                </Constraint>
-              </Constraints>
-            </Component>
-            <Component class="javax.swing.JTextField" name="TxtEscolaridade">
-              <Constraints>
-                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="100" y="20" width="130" height="-1"/>
+                  <AbsoluteConstraints x="10" y="20" width="90" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -541,18 +574,18 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Sitka Small" size="11" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value=" RG:"/>
+                <Property name="text" type="java.lang.String" value="  RG:"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="250" y="20" width="30" height="20"/>
+                  <AbsoluteConstraints x="270" y="20" width="30" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
             <Component class="javax.swing.JTextField" name="TxtRG">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="280" y="20" width="140" height="-1"/>
+                  <AbsoluteConstraints x="300" y="20" width="130" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -565,7 +598,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="430" y="20" width="110" height="20"/>
+                  <AbsoluteConstraints x="450" y="20" width="110" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -577,7 +610,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="540" y="50" width="160" height="-1"/>
+                  <AbsoluteConstraints x="560" y="50" width="140" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -597,7 +630,7 @@
             <Component class="javax.swing.JTextField" name="TxtSalarioatual">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="100" y="80" width="130" height="-1"/>
+                  <AbsoluteConstraints x="100" y="80" width="150" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -610,7 +643,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="430" y="50" width="110" height="20"/>
+                  <AbsoluteConstraints x="450" y="50" width="110" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -622,7 +655,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="540" y="20" width="160" height="-1"/>
+                  <AbsoluteConstraints x="560" y="20" width="140" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -631,18 +664,18 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Sitka Small" size="11" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Sal&#xe1;rio Atual:"/>
+                <Property name="text" type="java.lang.String" value="  Sal&#xe1;rio Atual:"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="10" y="80" width="80" height="20"/>
+                  <AbsoluteConstraints x="10" y="80" width="90" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
             <Component class="javax.swing.JTextField" name="TxtSalarioadmissao">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="100" y="50" width="130" height="20"/>
+                  <AbsoluteConstraints x="100" y="50" width="150" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -655,7 +688,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="240" y="80" width="-1" height="20"/>
+                  <AbsoluteConstraints x="260" y="80" width="-1" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -668,12 +701,15 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="480" y="80" width="60" height="20"/>
+                  <AbsoluteConstraints x="500" y="80" width="60" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
             <Component class="javax.swing.JComboBox" name="TxtStatus">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Sitka Small" size="11" style="0"/>
+                </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="3">
                     <StringItem index="0" value="Selecionar"/>
@@ -687,7 +723,7 @@
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="540" y="80" width="160" height="-1"/>
+                  <AbsoluteConstraints x="560" y="80" width="140" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -711,7 +747,36 @@
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="280" y="80" width="140" height="-1"/>
+                  <AbsoluteConstraints x="300" y="80" width="130" height="-1"/>
+                </Constraint>
+              </Constraints>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="TxtEscolaridade">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="13">
+                    <StringItem index="0" value="Selecionar"/>
+                    <StringItem index="1" value="Fundamental - Incompleto"/>
+                    <StringItem index="2" value="Fundamental - Completo"/>
+                    <StringItem index="3" value="M&#xe9;dio - Incompleto"/>
+                    <StringItem index="4" value="M&#xe9;dio - Completo"/>
+                    <StringItem index="5" value="Superior - Incompleto"/>
+                    <StringItem index="6" value="Superior - Completo"/>
+                    <StringItem index="7" value="P&#xf3;s-gradua&#xe7;&#xe3;o - Incompleto"/>
+                    <StringItem index="8" value="P&#xf3;s-gradua&#xe7;&#xe3;o - Completo"/>
+                    <StringItem index="9" value="Mestrado - Incompleto"/>
+                    <StringItem index="10" value="Mestrado - Completo"/>
+                    <StringItem index="11" value="Doutorado - Incompleto"/>
+                    <StringItem index="12" value="Doutorado - Completo"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                  <AbsoluteConstraints x="100" y="20" width="150" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
